--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "src/main.js",
   "scripts": {
     "start": "electron .",
-    "pack": "build --dir",
+    "pack": "build -wl --x64 --ia32",
     "dist": "build"
   },
   "postinstall": "install-app-deps",
